--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
+<img src="../images/my_company_logo.png">
 
-  <!-- Your code here -->
 
 </body>
 </html>
