--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="hhttps://media.istockphoto.com/photos/paradise-beach-picture-id509488176?k=6&m=509488176&s=612x612&w=0&h=xUkao6mVjcKAAQNnf0aB5kKEfvg98pl1QzTSvSi-8PE=" alt="Happy Place">
 
-<img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
+<img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjf8ampkqDcAhVLMd8KHdc4Cp8QjRx6BAgBEAU&url=https%3A%2F%2Fwww.pinterest.com%2Fturquoise_erin%2Fbeaches-feed-my-soul%2F&psig=AOvVaw3Xar-2zXV5hMxZxVo9Gj0G&ust=1531710984541553" alt="Waves" title="Summer">
 
 </body>
 </html>
